--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -14,6 +14,10 @@ jobs:
         with:
           submodules: true  # Fetch Hugo themes (true OR recursive)
           fetch-depth: 0    # Fetch all history for .GitInfo and .Lastmod
+      
+      - name: npm
+        uses: actions/setup-node@v2
+      - run: npm install
 
       - name: Setup Hugo
         uses: peaceiris/actions-hugo@v2
