--- a/config.toml
+++ b/config.toml
@@ -6,5 +6,8 @@ theme = "urdazuri"
 author = "Xabi Ezpeleta"
 copyright = "Copyright © 2021, Xabier Ezpeleta"
 
+summaryLength = 200
+pluralizeListTitles = false
+
 [build]
   writeStats = true
