--- a/config.yaml
+++ b/config.yaml
@@ -7,7 +7,9 @@ keywords: Blog
 copyright: 'Copyright © 2021, Xabier Ezpeleta. License [CC BY-SA 4.0](https://creativecommons.org/licenses/by-sa/4.0/).'
 theme: PaperMod
 
-paginate: 5
+# Replacing deprecated 'paginate' with new 'pagination.pagerSize'
+pagination:
+  pagerSize: 5
 pluralizeListTitles: false
 enableRobotsTXT: true
 
